# az-blob-md5-updater

./: Cargo.toml  LICENSE  README.md  log4rs.yml  rustfmt.toml
src/: main.rs
