[package]
name = "blob-md5-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { version = "0.20", default-features = false, features = [
  "enable_reqwest",
] }
azure_storage = { version = "0.20" }
azure_storage_blobs = { version = "0.20" }
base64 = "0.22.1"
clap = {version = "3.1.6", features = ["derive"]}
futures = "0.3"
md5 = "0.7"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.40"
